# pytorch-DMANet

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  predict.py  pyproject.toml  requirements.txt  setup.cfg  test.py  train.py
configs/: eval.yaml  predict.yaml  test.yaml  train.yaml
configs/callbacks/: default.yaml  lr_monitoring.yaml
configs/datamodule/: cityscape.yaml  dmanet.yaml  dmanet_datamodule.yaml  dmanet_dl_camvid.yaml  dmanet_fo_cityscape.yaml
configs/debug/: default.yaml  limit.yaml
configs/experiment/: camvid.yaml  cityscape.yaml  dma_net.yaml  dmanet.yaml  dmanet_camvid.yaml  dmanet_cityscape.yaml
configs/hparams_search/: dmanet_optuna.yaml  mnist_optuna.yaml
configs/log_dir/: predict.yaml
configs/logger/: aim.yaml  comet.yaml  csv.yaml  mlflow.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
configs/model/: dma_net.yaml  dmanet.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  default.yaml  gpu.yaml
docs/: DOCS.md
notebooks/: dataset-preparation.ipynb
scripts/: download_dataset.sh
src/: eval.py  predict_pipeline.py  testing_pipeline.py  train.py  training_pipeline.py
src/datamodules/: cityscape_datamodule.py  dmanet_datamodule.py
src/models/: dmanet_module.py  mnist_module.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py  visualize.py
tests/: test_dmanet_datamodule.py  test_dmanet_model.py  test_hub_dataset.py  test_visualize.py
tests/configs/: datamodule.yaml
tests/helpers/: package_available.py  run_if.py
(+20 files in other folders)
